--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ ExternalProject_add(HDF5
   CMAKE_ARGS
     -DCMAKE_BUILD_TYPE:STRING=${BUILD_TYPE}
     -DHDF5_BUILD_CPP_LIB:BOOL=OFF
-    -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=ON
+    -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF
     -DBUILD_SHARED_LIBS:BOOL=OFF
     -DHDF5_BUILD_TOOLS:BOOL=OFF
     -DHDF5_BUILD_EXAMPLES:BOOL=OFF
