--- a/.github/workflows/deploy-doc.yml
+++ b/.github/workflows/deploy-doc.yml
@@ -33,5 +33,5 @@ jobs:
               mkdocs-print-site-plugin \
               mike
       - run: git pull      
-      - run: cd ./site && mike deploy --push --update-aliases 4.0-Beta latest
+      - run: cd ./site && mike deploy --push --update-aliases 4.0 latest
       - run: cd ./site && mike set-default --push latest
